--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,15 +1,15 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
         {"name":"Python: Current File","type":"python","request":"launch","program":"${file}","console":"integratedTerminal"},
         {
             "name": "Python: Current File",
             "type": "python",
             "request": "launch",
-            "program": "${workspaceFolder}/code/preprocessing/reshape_image_and_bnd_box.py",
+            "cwd": "${workspaceFolder}/code",
+            "program": "${workspaceFolder}/test.py",
+
             "console": "integratedTerminal"
             
 
